parser.output
Terminals unused in grammar

   TOKEN_WHILE


State 141 conflicts: 1 shift/reduce
State 150 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: program decl
    2        | %empty

    3 decl: TOKEN_IDENT TOKEN_COLON type optinit
    4     | TOKEN_IDENT TOKEN_COLON TOKEN_FUNCTION functype optfuncinit

    5 optinit: TOKEN_ASSIGN expr TOKEN_SEMI
    6        | TOKEN_ASSIGN TOKEN_LBRACE expr exprlst TOKEN_RBRACE TOKEN_SEMI
    7        | TOKEN_ASSIGN TOKEN_LBRACE TOKEN_RBRACE TOKEN_SEMI
    8        | TOKEN_SEMI

    9 block: block stmt
   10      | %empty

   11 type: simpletype
   12     | arrtype

   13 simpletype: TOKEN_INT
   14           | TOKEN_FLOAT
   15           | TOKEN_STRING
   16           | TOKEN_CHAR
   17           | TOKEN_BOOL
   18           | TOKEN_AUTO
   19           | TOKEN_VOID

   20 arrtype: TOKEN_ARRAY TOKEN_LBRACKET TOKEN_INT_LITERAL TOKEN_RBRACKET type

   21 functype: type TOKEN_LPAREN paramlist TOKEN_RPAREN

   22 optfuncinit: TOKEN_ASSIGN TOKEN_LBRACE block TOKEN_RBRACE
   23            | TOKEN_SEMI

   24 paramlist: TOKEN_IDENT TOKEN_COLON simpletype optparam
   25          | TOKEN_IDENT TOKEN_COLON TOKEN_ARRAY TOKEN_LBRACKET TOKEN_RBRACKET type
   26          | %empty

   27 optparam: optparam TOKEN_COMMA TOKEN_IDENT TOKEN_COLON simpletype
   28         | optparam TOKEN_COMMA TOKEN_IDENT TOKEN_COLON TOKEN_ARRAY TOKEN_LBRACKET TOKEN_RBRACKET type
   29         | %empty

   30 stmt: expr TOKEN_SEMI
   31     | TOKEN_FOR TOKEN_LPAREN optexpr TOKEN_SEMI optexpr TOKEN_SEMI optexpr TOKEN_RPAREN TOKEN_LBRACE block TOKEN_RBRACE
   32     | TOKEN_FOR TOKEN_LPAREN optexpr TOKEN_SEMI optexpr TOKEN_SEMI optexpr TOKEN_RPAREN stmt
   33     | TOKEN_IF TOKEN_LPAREN expr TOKEN_RPAREN TOKEN_LBRACE block TOKEN_RBRACE optelse
   34     | TOKEN_IF TOKEN_LPAREN expr TOKEN_RPAREN stmt optelse
   35     | TOKEN_PRINT expr exprlst TOKEN_SEMI
   36     | TOKEN_PRINT TOKEN_SEMI
   37     | TOKEN_RETURN expr TOKEN_SEMI
   38     | decl

   39 optelse: TOKEN_ELSE stmt
   40        | TOKEN_ELSE TOKEN_LBRACE block TOKEN_RBRACE
   41        | %empty

   42 exprlst: exprlst TOKEN_COMMA expr
   43        | %empty

   44 optexpr: expr
   45        | %empty

   46 expr: expr TOKEN_ASSIGN rightval
   47     | rightval

   48 rightval: rightval TOKEN_OR or_operand
   49         | or_operand

   50 or_operand: or_operand TOKEN_AND and_operand
   51           | and_operand

   52 and_operand: and_operand TOKEN_LT compared
   53            | and_operand TOKEN_LE compared
   54            | and_operand TOKEN_GT compared
   55            | and_operand TOKEN_GE compared
   56            | and_operand TOKEN_EQ compared
   57            | and_operand TOKEN_NE compared
   58            | compared

   59 compared: compared TOKEN_PLUS term
   60         | compared TOKEN_MINUS term
   61         | term

   62 term: term TOKEN_MUL exponent
   63     | term TOKEN_DIV exponent
   64     | term TOKEN_MOD exponent
   65     | exponent

   66 exponent: exponent TOKEN_EXP multiplier
   67         | multiplier

   68 multiplier: TOKEN_MINUS factor
   69           | TOKEN_PLUS factor
   70           | TOKEN_NOT factor
   71           | factor

   72 factor: value TOKEN_INCRE
   73       | value TOKEN_DECRE
   74       | value

   75 value: TOKEN_LPAREN expr TOKEN_RPAREN
   76      | TOKEN_INT_LITERAL
   77      | TOKEN_FLOAT_LITERAL
   78      | TOKEN_CHAR_LITERAL
   79      | TOKEN_STRING_LITERAL
   80      | TOKEN_TRUE
   81      | TOKEN_FALSE
   82      | TOKEN_IDENT TOKEN_LBRACKET expr TOKEN_RBRACKET
   83      | TOKEN_IDENT


Terminals, with rules where they appear

$end (0) 0
error (256)
TOKEN_INT (258) 13
TOKEN_FLOAT (259) 14
TOKEN_CHAR (260) 16
TOKEN_STRING (261) 15
TOKEN_ARRAY (262) 20 25 28
TOKEN_AUTO (263) 18
TOKEN_BOOL (264) 17
TOKEN_TRUE (265) 80
TOKEN_FALSE (266) 81
TOKEN_VOID (267) 19
TOKEN_IF (268) 33 34
TOKEN_ELSE (269) 39 40
TOKEN_FOR (270) 31 32
TOKEN_FUNCTION (271) 4
TOKEN_PRINT (272) 35 36
TOKEN_RETURN (273) 37
TOKEN_WHILE (274)
TOKEN_LPAREN (275) 21 31 32 33 34 75
TOKEN_RPAREN (276) 21 31 32 33 34 75
TOKEN_LBRACKET (277) 20 25 28 82
TOKEN_RBRACKET (278) 20 25 28 82
TOKEN_INCRE (279) 72
TOKEN_DECRE (280) 73
TOKEN_NOT (281) 70
TOKEN_EXP (282) 66
TOKEN_MINUS (283) 60 68
TOKEN_DIV (284) 63
TOKEN_MOD (285) 64
TOKEN_PLUS (286) 59 69
TOKEN_MUL (287) 62
TOKEN_LT (288) 52
TOKEN_LE (289) 53
TOKEN_GT (290) 54
TOKEN_GE (291) 55
TOKEN_EQ (292) 56
TOKEN_NE (293) 57
TOKEN_AND (294) 50
TOKEN_OR (295) 48
TOKEN_ASSIGN (296) 5 6 7 22 46
TOKEN_LBRACE (297) 6 7 22 31 33 40
TOKEN_RBRACE (298) 6 7 22 31 33 40
TOKEN_SEMI (299) 5 6 7 8 23 30 31 32 35 36 37
TOKEN_COMMA (300) 27 28 42
TOKEN_COLON (301) 3 4 24 25 27 28
TOKEN_INT_LITERAL (302) 20 76
TOKEN_FLOAT_LITERAL (303) 77
TOKEN_STRING_LITERAL (304) 79
TOKEN_CHAR_LITERAL (305) 78
TOKEN_IDENT (306) 3 4 24 25 27 28 82 83


Nonterminals, with rules where they appear

$accept (52)
    on left: 0
program (53)
    on left: 1 2, on right: 0 1
decl (54)
    on left: 3 4, on right: 1 38
optinit (55)
    on left: 5 6 7 8, on right: 3
block (56)
    on left: 9 10, on right: 9 22 31 33 40
type (57)
    on left: 11 12, on right: 3 20 21 25 28
simpletype (58)
    on left: 13 14 15 16 17 18 19, on right: 11 24 27
arrtype (59)
    on left: 20, on right: 12
functype (60)
    on left: 21, on right: 4
optfuncinit (61)
    on left: 22 23, on right: 4
paramlist (62)
    on left: 24 25 26, on right: 21
optparam (63)
    on left: 27 28 29, on right: 24 27 28
stmt (64)
    on left: 30 31 32 33 34 35 36 37 38, on right: 9 32 34 39
optelse (65)
    on left: 39 40 41, on right: 33 34
exprlst (66)
    on left: 42 43, on right: 6 35 42
optexpr (67)
    on left: 44 45, on right: 31 32
expr (68)
    on left: 46 47, on right: 5 6 30 33 34 35 37 42 44 46 75 82
rightval (69)
    on left: 48 49, on right: 46 47 48
or_operand (70)
    on left: 50 51, on right: 48 49 50
and_operand (71)
    on left: 52 53 54 55 56 57 58, on right: 50 51 52 53 54 55 56 57
compared (72)
    on left: 59 60 61, on right: 52 53 54 55 56 57 58 59 60
term (73)
    on left: 62 63 64 65, on right: 59 60 61 62 63 64
exponent (74)
    on left: 66 67, on right: 62 63 64 65 66
multiplier (75)
    on left: 68 69 70 71, on right: 66 67
factor (76)
    on left: 72 73 74, on right: 68 69 70 71
value (77)
    on left: 75 76 77 78 79 80 81 82 83, on right: 72 73 74


State 0

    0 $accept: . program $end

    $default  reduce using rule 2 (program)

    program  go to state 1


State 1

    0 $accept: program . $end
    1 program: program . decl

    $end         shift, and go to state 2
    TOKEN_IDENT  shift, and go to state 3

    decl  go to state 4


State 2

    0 $accept: program $end .

    $default  accept


State 3

    3 decl: TOKEN_IDENT . TOKEN_COLON type optinit
    4     | TOKEN_IDENT . TOKEN_COLON TOKEN_FUNCTION functype optfuncinit

    TOKEN_COLON  shift, and go to state 5


State 4

    1 program: program decl .

    $default  reduce using rule 1 (program)


State 5

    3 decl: TOKEN_IDENT TOKEN_COLON . type optinit
    4     | TOKEN_IDENT TOKEN_COLON . TOKEN_FUNCTION functype optfuncinit

    TOKEN_INT       shift, and go to state 6
    TOKEN_FLOAT     shift, and go to state 7
    TOKEN_CHAR      shift, and go to state 8
    TOKEN_STRING    shift, and go to state 9
    TOKEN_ARRAY     shift, and go to state 10
    TOKEN_AUTO      shift, and go to state 11
    TOKEN_BOOL      shift, and go to state 12
    TOKEN_VOID      shift, and go to state 13
    TOKEN_FUNCTION  shift, and go to state 14

    type        go to state 15
    simpletype  go to state 16
    arrtype     go to state 17


State 6

   13 simpletype: TOKEN_INT .

    $default  reduce using rule 13 (simpletype)


State 7

   14 simpletype: TOKEN_FLOAT .

    $default  reduce using rule 14 (simpletype)


State 8

   16 simpletype: TOKEN_CHAR .

    $default  reduce using rule 16 (simpletype)


State 9

   15 simpletype: TOKEN_STRING .

    $default  reduce using rule 15 (simpletype)


State 10

   20 arrtype: TOKEN_ARRAY . TOKEN_LBRACKET TOKEN_INT_LITERAL TOKEN_RBRACKET type

    TOKEN_LBRACKET  shift, and go to state 18


State 11

   18 simpletype: TOKEN_AUTO .

    $default  reduce using rule 18 (simpletype)


State 12

   17 simpletype: TOKEN_BOOL .

    $default  reduce using rule 17 (simpletype)


State 13

   19 simpletype: TOKEN_VOID .

    $default  reduce using rule 19 (simpletype)


State 14

    4 decl: TOKEN_IDENT TOKEN_COLON TOKEN_FUNCTION . functype optfuncinit

    TOKEN_INT     shift, and go to state 6
    TOKEN_FLOAT   shift, and go to state 7
    TOKEN_CHAR    shift, and go to state 8
    TOKEN_STRING  shift, and go to state 9
    TOKEN_ARRAY   shift, and go to state 10
    TOKEN_AUTO    shift, and go to state 11
    TOKEN_BOOL    shift, and go to state 12
    TOKEN_VOID    shift, and go to state 13

    type        go to state 19
    simpletype  go to state 16
    arrtype     go to state 17
    functype    go to state 20


State 15

    3 decl: TOKEN_IDENT TOKEN_COLON type . optinit

    TOKEN_ASSIGN  shift, and go to state 21
    TOKEN_SEMI    shift, and go to state 22

    optinit  go to state 23


State 16

   11 type: simpletype .

    $default  reduce using rule 11 (type)


State 17

   12 type: arrtype .

    $default  reduce using rule 12 (type)


State 18

   20 arrtype: TOKEN_ARRAY TOKEN_LBRACKET . TOKEN_INT_LITERAL TOKEN_RBRACKET type

    TOKEN_INT_LITERAL  shift, and go to state 24


State 19

   21 functype: type . TOKEN_LPAREN paramlist TOKEN_RPAREN

    TOKEN_LPAREN  shift, and go to state 25


State 20

    4 decl: TOKEN_IDENT TOKEN_COLON TOKEN_FUNCTION functype . optfuncinit

    TOKEN_ASSIGN  shift, and go to state 26
    TOKEN_SEMI    shift, and go to state 27

    optfuncinit  go to state 28


State 21

    5 optinit: TOKEN_ASSIGN . expr TOKEN_SEMI
    6        | TOKEN_ASSIGN . TOKEN_LBRACE expr exprlst TOKEN_RBRACE TOKEN_SEMI
    7        | TOKEN_ASSIGN . TOKEN_LBRACE TOKEN_RBRACE TOKEN_SEMI

    TOKEN_TRUE            shift, and go to state 29
    TOKEN_FALSE           shift, and go to state 30
    TOKEN_LPAREN          shift, and go to state 31
    TOKEN_NOT             shift, and go to state 32
    TOKEN_MINUS           shift, and go to state 33
    TOKEN_PLUS            shift, and go to state 34
    TOKEN_LBRACE          shift, and go to state 35
    TOKEN_INT_LITERAL     shift, and go to state 36
    TOKEN_FLOAT_LITERAL   shift, and go to state 37
    TOKEN_STRING_LITERAL  shift, and go to state 38
    TOKEN_CHAR_LITERAL    shift, and go to state 39
    TOKEN_IDENT           shift, and go to state 40

    expr         go to state 41
    rightval     go to state 42
    or_operand   go to state 43
    and_operand  go to state 44
    compared     go to state 45
    term         go to state 46
    exponent     go to state 47
    multiplier   go to state 48
    factor       go to state 49
    value        go to state 50


State 22

    8 optinit: TOKEN_SEMI .

    $default  reduce using rule 8 (optinit)


State 23

    3 decl: TOKEN_IDENT TOKEN_COLON type optinit .

    $default  reduce using rule 3 (decl)


State 24

   20 arrtype: TOKEN_ARRAY TOKEN_LBRACKET TOKEN_INT_LITERAL . TOKEN_RBRACKET type

    TOKEN_RBRACKET  shift, and go to state 51


State 25

   21 functype: type TOKEN_LPAREN . paramlist TOKEN_RPAREN

    TOKEN_IDENT  shift, and go to state 52

    $default  reduce using rule 26 (paramlist)

    paramlist  go to state 53


State 26

   22 optfuncinit: TOKEN_ASSIGN . TOKEN_LBRACE block TOKEN_RBRACE

    TOKEN_LBRACE  shift, and go to state 54


State 27

   23 optfuncinit: TOKEN_SEMI .

    $default  reduce using rule 23 (optfuncinit)


State 28

    4 decl: TOKEN_IDENT TOKEN_COLON TOKEN_FUNCTION functype optfuncinit .

    $default  reduce using rule 4 (decl)


State 29

   80 value: TOKEN_TRUE .

    $default  reduce using rule 80 (value)


State 30

   81 value: TOKEN_FALSE .

    $default  reduce using rule 81 (value)


State 31

   75 value: TOKEN_LPAREN . expr TOKEN_RPAREN

    TOKEN_TRUE            shift, and go to state 29
    TOKEN_FALSE           shift, and go to state 30
    TOKEN_LPAREN          shift, and go to state 31
    TOKEN_NOT             shift, and go to state 32
    TOKEN_MINUS           shift, and go to state 33
    TOKEN_PLUS            shift, and go to state 34
    TOKEN_INT_LITERAL     shift, and go to state 36
    TOKEN_FLOAT_LITERAL   shift, and go to state 37
    TOKEN_STRING_LITERAL  shift, and go to state 38
    TOKEN_CHAR_LITERAL    shift, and go to state 39
    TOKEN_IDENT           shift, and go to state 40

    expr         go to state 55
    rightval     go to state 42
    or_operand   go to state 43
    and_operand  go to state 44
    compared     go to state 45
    term         go to state 46
    exponent     go to state 47
    multiplier   go to state 48
    factor       go to state 49
    value        go to state 50


State 32

   70 multiplier: TOKEN_NOT . factor

    TOKEN_TRUE            shift, and go to state 29
    TOKEN_FALSE           shift, and go to state 30
    TOKEN_LPAREN          shift, and go to state 31
    TOKEN_INT_LITERAL     shift, and go to state 36
    TOKEN_FLOAT_LITERAL   shift, and go to state 37
    TOKEN_STRING_LITERAL  shift, and go to state 38
    TOKEN_CHAR_LITERAL    shift, and go to state 39
    TOKEN_IDENT           shift, and go to state 40

    factor  go to state 56
    value   go to state 50


State 33

   68 multiplier: TOKEN_MINUS . factor

    TOKEN_TRUE            shift, and go to state 29
    TOKEN_FALSE           shift, and go to state 30
    TOKEN_LPAREN          shift, and go to state 31
    TOKEN_INT_LITERAL     shift, and go to state 36
    TOKEN_FLOAT_LITERAL   shift, and go to state 37
    TOKEN_STRING_LITERAL  shift, and go to state 38
    TOKEN_CHAR_LITERAL    shift, and go to state 39
    TOKEN_IDENT           shift, and go to state 40

    factor  go to state 57
    value   go to state 50


State 34

   69 multiplier: TOKEN_PLUS . factor

    TOKEN_TRUE            shift, and go to state 29
    TOKEN_FALSE           shift, and go to state 30
    TOKEN_LPAREN          shift, and go to state 31
    TOKEN_INT_LITERAL     shift, and go to state 36
    TOKEN_FLOAT_LITERAL   shift, and go to state 37
    TOKEN_STRING_LITERAL  shift, and go to state 38
    TOKEN_CHAR_LITERAL    shift, and go to state 39
    TOKEN_IDENT           shift, and go to state 40

    factor  go to state 58
    value   go to state 50


State 35

    6 optinit: TOKEN_ASSIGN TOKEN_LBRACE . expr exprlst TOKEN_RBRACE TOKEN_SEMI
    7        | TOKEN_ASSIGN TOKEN_LBRACE . TOKEN_RBRACE TOKEN_SEMI

    TOKEN_TRUE            shift, and go to state 29
    TOKEN_FALSE           shift, and go to state 30
    TOKEN_LPAREN          shift, and go to state 31
    TOKEN_NOT             shift, and go to state 32
    TOKEN_MINUS           shift, and go to state 33
    TOKEN_PLUS            shift, and go to state 34
    TOKEN_RBRACE          shift, and go to state 59
    TOKEN_INT_LITERAL     shift, and go to state 36
    TOKEN_FLOAT_LITERAL   shift, and go to state 37
    TOKEN_STRING_LITERAL  shift, and go to state 38
    TOKEN_CHAR_LITERAL    shift, and go to state 39
    TOKEN_IDENT           shift, and go to state 40

    expr         go to state 60
    rightval     go to state 42
    or_operand   go to state 43
    and_operand  go to state 44
    compared     go to state 45
    term         go to state 46
    exponent     go to state 47
    multiplier   go to state 48
    factor       go to state 49
    value        go to state 50


State 36

   76 value: TOKEN_INT_LITERAL .

    $default  reduce using rule 76 (value)


State 37

   77 value: TOKEN_FLOAT_LITERAL .

    $default  reduce using rule 77 (value)


State 38

   79 value: TOKEN_STRING_LITERAL .

    $default  reduce using rule 79 (value)


State 39

   78 value: TOKEN_CHAR_LITERAL .

    $default  reduce using rule 78 (value)


State 40

   82 value: TOKEN_IDENT . TOKEN_LBRACKET expr TOKEN_RBRACKET
   83      | TOKEN_IDENT .

    TOKEN_LBRACKET  shift, and go to state 61

    $default  reduce using rule 83 (value)


State 41

    5 optinit: TOKEN_ASSIGN expr . TOKEN_SEMI
   46 expr: expr . TOKEN_ASSIGN rightval

    TOKEN_ASSIGN  shift, and go to state 62
    TOKEN_SEMI    shift, and go to state 63


State 42

   47 expr: rightval .
   48 rightval: rightval . TOKEN_OR or_operand

    TOKEN_OR  shift, and go to state 64

    $default  reduce using rule 47 (expr)


State 43

   49 rightval: or_operand .
   50 or_operand: or_operand . TOKEN_AND and_operand

    TOKEN_AND  shift, and go to state 65

    $default  reduce using rule 49 (rightval)


State 44

   51 or_operand: and_operand .
   52 and_operand: and_operand . TOKEN_LT compared
   53            | and_operand . TOKEN_LE compared
   54            | and_operand . TOKEN_GT compared
   55            | and_operand . TOKEN_GE compared
   56            | and_operand . TOKEN_EQ compared
   57            | and_operand . TOKEN_NE compared

    TOKEN_LT  shift, and go to state 66
    TOKEN_LE  shift, and go to state 67
    TOKEN_GT  shift, and go to state 68
    TOKEN_GE  shift, and go to state 69
    TOKEN_EQ  shift, and go to state 70
    TOKEN_NE  shift, and go to state 71

    $default  reduce using rule 51 (or_operand)


State 45

   58 and_operand: compared .
   59 compared: compared . TOKEN_PLUS term
   60         | compared . TOKEN_MINUS term

    TOKEN_MINUS  shift, and go to state 72
    TOKEN_PLUS   shift, and go to state 73

    $default  reduce using rule 58 (and_operand)


State 46

   61 compared: term .
   62 term: term . TOKEN_MUL exponent
   63     | term . TOKEN_DIV exponent
   64     | term . TOKEN_MOD exponent

    TOKEN_DIV  shift, and go to state 74
    TOKEN_MOD  shift, and go to state 75
    TOKEN_MUL  shift, and go to state 76

    $default  reduce using rule 61 (compared)


State 47

   65 term: exponent .
   66 exponent: exponent . TOKEN_EXP multiplier

    TOKEN_EXP  shift, and go to state 77

    $default  reduce using rule 65 (term)


State 48

   67 exponent: multiplier .

    $default  reduce using rule 67 (exponent)


State 49

   71 multiplier: factor .

    $default  reduce using rule 71 (multiplier)


State 50

   72 factor: value . TOKEN_INCRE
   73       | value . TOKEN_DECRE
   74       | value .

    TOKEN_INCRE  shift, and go to state 78
    TOKEN_DECRE  shift, and go to state 79

    $default  reduce using rule 74 (factor)


State 51

   20 arrtype: TOKEN_ARRAY TOKEN_LBRACKET TOKEN_INT_LITERAL TOKEN_RBRACKET . type

    TOKEN_INT     shift, and go to state 6
    TOKEN_FLOAT   shift, and go to state 7
    TOKEN_CHAR    shift, and go to state 8
    TOKEN_STRING  shift, and go to state 9
    TOKEN_ARRAY   shift, and go to state 10
    TOKEN_AUTO    shift, and go to state 11
    TOKEN_BOOL    shift, and go to state 12
    TOKEN_VOID    shift, and go to state 13

    type        go to state 80
    simpletype  go to state 16
    arrtype     go to state 17


State 52

   24 paramlist: TOKEN_IDENT . TOKEN_COLON simpletype optparam
   25          | TOKEN_IDENT . TOKEN_COLON TOKEN_ARRAY TOKEN_LBRACKET TOKEN_RBRACKET type

    TOKEN_COLON  shift, and go to state 81


State 53

   21 functype: type TOKEN_LPAREN paramlist . TOKEN_RPAREN

    TOKEN_RPAREN  shift, and go to state 82


State 54

   22 optfuncinit: TOKEN_ASSIGN TOKEN_LBRACE . block TOKEN_RBRACE

    $default  reduce using rule 10 (block)

    block  go to state 83


State 55

   46 expr: expr . TOKEN_ASSIGN rightval
   75 value: TOKEN_LPAREN expr . TOKEN_RPAREN

    TOKEN_RPAREN  shift, and go to state 84
    TOKEN_ASSIGN  shift, and go to state 62


State 56

   70 multiplier: TOKEN_NOT factor .

    $default  reduce using rule 70 (multiplier)


State 57

   68 multiplier: TOKEN_MINUS factor .

    $default  reduce using rule 68 (multiplier)


State 58

   69 multiplier: TOKEN_PLUS factor .

    $default  reduce using rule 69 (multiplier)


State 59

    7 optinit: TOKEN_ASSIGN TOKEN_LBRACE TOKEN_RBRACE . TOKEN_SEMI

    TOKEN_SEMI  shift, and go to state 85


State 60

    6 optinit: TOKEN_ASSIGN TOKEN_LBRACE expr . exprlst TOKEN_RBRACE TOKEN_SEMI
   46 expr: expr . TOKEN_ASSIGN rightval

    TOKEN_ASSIGN  shift, and go to state 62

    $default  reduce using rule 43 (exprlst)

    exprlst  go to state 86


State 61

   82 value: TOKEN_IDENT TOKEN_LBRACKET . expr TOKEN_RBRACKET

    TOKEN_TRUE            shift, and go to state 29
    TOKEN_FALSE           shift, and go to state 30
    TOKEN_LPAREN          shift, and go to state 31
    TOKEN_NOT             shift, and go to state 32
    TOKEN_MINUS           shift, and go to state 33
    TOKEN_PLUS            shift, and go to state 34
    TOKEN_INT_LITERAL     shift, and go to state 36
    TOKEN_FLOAT_LITERAL   shift, and go to state 37
    TOKEN_STRING_LITERAL  shift, and go to state 38
    TOKEN_CHAR_LITERAL    shift, and go to state 39
    TOKEN_IDENT           shift, and go to state 40

    expr         go to state 87
    rightval     go to state 42
    or_operand   go to state 43
    and_operand  go to state 44
    compared     go to state 45
    term         go to state 46
    exponent     go to state 47
    multiplier   go to state 48
    factor       go to state 49
    value        go to state 50


State 62

   46 expr: expr TOKEN_ASSIGN . rightval

    TOKEN_TRUE            shift, and go to state 29
    TOKEN_FALSE           shift, and go to state 30
    TOKEN_LPAREN          shift, and go to state 31
    TOKEN_NOT             shift, and go to state 32
    TOKEN_MINUS           shift, and go to state 33
    TOKEN_PLUS            shift, and go to state 34
    TOKEN_INT_LITERAL     shift, and go to state 36
    TOKEN_FLOAT_LITERAL   shift, and go to state 37
    TOKEN_STRING_LITERAL  shift, and go to state 38
    TOKEN_CHAR_LITERAL    shift, and go to state 39
    TOKEN_IDENT           shift, and go to state 40

    rightval     go to state 88
    or_operand   go to state 43
    and_operand  go to state 44
    compared     go to state 45
    term         go to state 46
    exponent     go to state 47
    multiplier   go to state 48
    factor       go to state 49
    value        go to state 50


State 63

    5 optinit: TOKEN_ASSIGN expr TOKEN_SEMI .

    $default  reduce using rule 5 (optinit)


State 64

   48 rightval: rightval TOKEN_OR . or_operand

    TOKEN_TRUE            shift, and go to state 29
    TOKEN_FALSE           shift, and go to state 30
    TOKEN_LPAREN          shift, and go to state 31
    TOKEN_NOT             shift, and go to state 32
    TOKEN_MINUS           shift, and go to state 33
    TOKEN_PLUS            shift, and go to state 34
    TOKEN_INT_LITERAL     shift, and go to state 36
    TOKEN_FLOAT_LITERAL   shift, and go to state 37
    TOKEN_STRING_LITERAL  shift, and go to state 38
    TOKEN_CHAR_LITERAL    shift, and go to state 39
    TOKEN_IDENT           shift, and go to state 40

    or_operand   go to state 89
    and_operand  go to state 44
    compared     go to state 45
    term         go to state 46
    exponent     go to state 47
    multiplier   go to state 48
    factor       go to state 49
    value        go to state 50


State 65

   50 or_operand: or_operand TOKEN_AND . and_operand

    TOKEN_TRUE            shift, and go to state 29
    TOKEN_FALSE           shift, and go to state 30
    TOKEN_LPAREN          shift, and go to state 31
    TOKEN_NOT             shift, and go to state 32
    TOKEN_MINUS           shift, and go to state 33
    TOKEN_PLUS            shift, and go to state 34
    TOKEN_INT_LITERAL     shift, and go to state 36
    TOKEN_FLOAT_LITERAL   shift, and go to state 37
    TOKEN_STRING_LITERAL  shift, and go to state 38
    TOKEN_CHAR_LITERAL    shift, and go to state 39
    TOKEN_IDENT           shift, and go to state 40

    and_operand  go to state 90
    compared     go to state 45
    term         go to state 46
    exponent     go to state 47
    multiplier   go to state 48
    factor       go to state 49
    value        go to state 50


State 66

   52 and_operand: and_operand TOKEN_LT . compared

    TOKEN_TRUE            shift, and go to state 29
    TOKEN_FALSE           shift, and go to state 30
    TOKEN_LPAREN          shift, and go to state 31
    TOKEN_NOT             shift, and go to state 32
    TOKEN_MINUS           shift, and go to state 33
    TOKEN_PLUS            shift, and go to state 34
    TOKEN_INT_LITERAL     shift, and go to state 36
    TOKEN_FLOAT_LITERAL   shift, and go to state 37
    TOKEN_STRING_LITERAL  shift, and go to state 38
    TOKEN_CHAR_LITERAL    shift, and go to state 39
    TOKEN_IDENT           shift, and go to state 40

    compared    go to state 91
    term        go to state 46
    exponent    go to state 47
    multiplier  go to state 48
    factor      go to state 49
    value       go to state 50


State 67

   53 and_operand: and_operand TOKEN_LE . compared

    TOKEN_TRUE            shift, and go to state 29
    TOKEN_FALSE           shift, and go to state 30
    TOKEN_LPAREN          shift, and go to state 31
    TOKEN_NOT             shift, and go to state 32
    TOKEN_MINUS           shift, and go to state 33
    TOKEN_PLUS            shift, and go to state 34
    TOKEN_INT_LITERAL     shift, and go to state 36
    TOKEN_FLOAT_LITERAL   shift, and go to state 37
    TOKEN_STRING_LITERAL  shift, and go to state 38
    TOKEN_CHAR_LITERAL    shift, and go to state 39
    TOKEN_IDENT           shift, and go to state 40

    compared    go to state 92
    term        go to state 46
    exponent    go to state 47
    multiplier  go to state 48
    factor      go to state 49
    value       go to state 50


State 68

   54 and_operand: and_operand TOKEN_GT . compared

    TOKEN_TRUE            shift, and go to state 29
    TOKEN_FALSE           shift, and go to state 30
    TOKEN_LPAREN          shift, and go to state 31
    TOKEN_NOT             shift, and go to state 32
    TOKEN_MINUS           shift, and go to state 33
    TOKEN_PLUS            shift, and go to state 34
    TOKEN_INT_LITERAL     shift, and go to state 36
    TOKEN_FLOAT_LITERAL   shift, and go to state 37
    TOKEN_STRING_LITERAL  shift, and go to state 38
    TOKEN_CHAR_LITERAL    shift, and go to state 39
    TOKEN_IDENT           shift, and go to state 40

    compared    go to state 93
    term        go to state 46
    exponent    go to state 47
    multiplier  go to state 48
    factor      go to state 49
    value       go to state 50


State 69

   55 and_operand: and_operand TOKEN_GE . compared

    TOKEN_TRUE            shift, and go to state 29
    TOKEN_FALSE           shift, and go to state 30
    TOKEN_LPAREN          shift, and go to state 31
    TOKEN_NOT             shift, and go to state 32
    TOKEN_MINUS           shift, and go to state 33
    TOKEN_PLUS            shift, and go to state 34
    TOKEN_INT_LITERAL     shift, and go to state 36
    TOKEN_FLOAT_LITERAL   shift, and go to state 37
    TOKEN_STRING_LITERAL  shift, and go to state 38
    TOKEN_CHAR_LITERAL    shift, and go to state 39
    TOKEN_IDENT           shift, and go to state 40

    compared    go to state 94
    term        go to state 46
    exponent    go to state 47
    multiplier  go to state 48
    factor      go to state 49
    value       go to state 50


State 70

   56 and_operand: and_operand TOKEN_EQ . compared

    TOKEN_TRUE            shift, and go to state 29
    TOKEN_FALSE           shift, and go to state 30
    TOKEN_LPAREN          shift, and go to state 31
    TOKEN_NOT             shift, and go to state 32
    TOKEN_MINUS           shift, and go to state 33
    TOKEN_PLUS            shift, and go to state 34
    TOKEN_INT_LITERAL     shift, and go to state 36
    TOKEN_FLOAT_LITERAL   shift, and go to state 37
    TOKEN_STRING_LITERAL  shift, and go to state 38
    TOKEN_CHAR_LITERAL    shift, and go to state 39
    TOKEN_IDENT           shift, and go to state 40

    compared    go to state 95
    term        go to state 46
    exponent    go to state 47
    multiplier  go to state 48
    factor      go to state 49
    value       go to state 50


State 71

   57 and_operand: and_operand TOKEN_NE . compared

    TOKEN_TRUE            shift, and go to state 29
    TOKEN_FALSE           shift, and go to state 30
    TOKEN_LPAREN          shift, and go to state 31
    TOKEN_NOT             shift, and go to state 32
    TOKEN_MINUS           shift, and go to state 33
    TOKEN_PLUS            shift, and go to state 34
    TOKEN_INT_LITERAL     shift, and go to state 36
    TOKEN_FLOAT_LITERAL   shift, and go to state 37
    TOKEN_STRING_LITERAL  shift, and go to state 38
    TOKEN_CHAR_LITERAL    shift, and go to state 39
    TOKEN_IDENT           shift, and go to state 40

    compared    go to state 96
    term        go to state 46
    exponent    go to state 47
    multiplier  go to state 48
    factor      go to state 49
    value       go to state 50


State 72

   60 compared: compared TOKEN_MINUS . term

    TOKEN_TRUE            shift, and go to state 29
    TOKEN_FALSE           shift, and go to state 30
    TOKEN_LPAREN          shift, and go to state 31
    TOKEN_NOT             shift, and go to state 32
    TOKEN_MINUS           shift, and go to state 33
    TOKEN_PLUS            shift, and go to state 34
    TOKEN_INT_LITERAL     shift, and go to state 36
    TOKEN_FLOAT_LITERAL   shift, and go to state 37
    TOKEN_STRING_LITERAL  shift, and go to state 38
    TOKEN_CHAR_LITERAL    shift, and go to state 39
    TOKEN_IDENT           shift, and go to state 40

    term        go to state 97
    exponent    go to state 47
    multiplier  go to state 48
    factor      go to state 49
    value       go to state 50


State 73

   59 compared: compared TOKEN_PLUS . term

    TOKEN_TRUE            shift, and go to state 29
    TOKEN_FALSE           shift, and go to state 30
    TOKEN_LPAREN          shift, and go to state 31
    TOKEN_NOT             shift, and go to state 32
    TOKEN_MINUS           shift, and go to state 33
    TOKEN_PLUS            shift, and go to state 34
    TOKEN_INT_LITERAL     shift, and go to state 36
    TOKEN_FLOAT_LITERAL   shift, and go to state 37
    TOKEN_STRING_LITERAL  shift, and go to state 38
    TOKEN_CHAR_LITERAL    shift, and go to state 39
    TOKEN_IDENT           shift, and go to state 40
